--- a/src/client/components/IncidentTab.css
+++ b/src/client/components/IncidentTab.css
@@ -221,6 +221,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
+  flex: 1;
   min-width: 40px;
 }
 
