--- a/src/client/components/MTTRTab.css
+++ b/src/client/components/MTTRTab.css
@@ -174,6 +174,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
   min-width: 60px;
   flex: 1;
 }
