--- a/src/client/components/MTTRTab.css
+++ b/src/client/components/MTTRTab.css
@@ -175,6 +175,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  height: 100%;
   min-width: 60px;
   flex: 1;
 }
